# FhCampusHttpAPI

./: .gitignore  CMakeLists.txt  FH.cpp  FH.h  FHException.h  Hilfsfunktionen.cpp  Hilfsfunktionen.h  Jahrgang.cpp  Jahrgang.h  Person.cpp  REQUEST.cpp  REQUEST.h  Studierender.h  classhier.txt  main.cpp  readMe.txt  testfile.c
data/: Angestellte.txt  Jahrga.txt  Jahrgaenge.txt  Studierende.txt  test.txt
include/: Angestellter.h  FH.h  Hilfsfunktionen.h  Jahrgang.h  Person.h  REQUEST.h  Studierender.h
lib/: Angestellter.cpp  FH.cpp  Hilfsfunktionen.cpp  Jahrgang.cpp  Person.cpp  REQUEST.cpp  Studierender.cpp
src/: main.cpp  server.cpp
